--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
     transform-style: preserve-3d;
     transition: transform 0.5s ease;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
-    background-image: url("images/image1.jpg");
+    background-image: url("image1.jpg");
 }
 
 .spine {
@@ -59,14 +59,14 @@ body {
     position: absolute;
     backface-visibility: hidden;
     overflow: hidden;
-    background-image: url("images/image3.jpg");
+    background-image: url("image3.jpg");
     border: 1px solid #ccc;
 }
 
 .page .back {
     transform: rotateY(180deg);
     background: hsl(0, 0%, 100%); /* Pinkish back */
-    background-image:url("images/image2.jpg");
+    background-image:url("image2.jpg");
 }
 
 .bg-image {
@@ -109,7 +109,7 @@ body {
 
 .login-form {
     background: #76fff8c2; /* Greenish form */
-    background-image: url("images/image4.jpg");
+    background-image: url("image4.jpg");
     filter: blur();
     padding: 20px;
     border-radius: 10px;
